--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "../node_modules/.bin/nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "googleapis": "^105.0.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   }
